--- a/.github/workflows/deploy-application.yml
+++ b/.github/workflows/deploy-application.yml
@@ -1,9 +1,9 @@
 name: Deploy Application
 
 on:
-  push:
+  pull_request:
     branches:
-      - main
+      - *
 
 jobs:
   create-deployment-artifans:
