--- a/.github/workflows/deploy-application.yml
+++ b/.github/workflows/deploy-application.yml
@@ -17,3 +17,7 @@ jobs:
         with:
           php-version: 8.0
           extensions: mbstring, ctype, fileinfo, openssl, PDO, bcmath, json, tokenizer, xml
+
+
+      - name: Install Composer
+        run: composer install --no-dev --no-interaction --prefer-dist
