--- a/.github/workflows/deploy-application.yml
+++ b/.github/workflows/deploy-application.yml
@@ -23,7 +23,10 @@ jobs:
         run: composer install --no-dev --no-interaction --prefer-dist
 
       - name: Run Tests
-        run: vendor/bin/phpunit
+        run: vendor/bin/phpunit tests/
 
       - name: Copy Env File
         run: cp .env.testing .env
+
+      - name: Change Directory Permissions
+        run: chmod -R 777 storage bootstrap/cache
