--- a/.github/workflows/deploy-application.yml
+++ b/.github/workflows/deploy-application.yml
@@ -22,6 +22,11 @@ jobs:
       - name: Install Composer
         run: composer install --no-scripts
 
+      - name: Prepare Laravel Application
+        run: |
+        cp .env.ci .env
+        php artisan key:generate
+
       - name: Run Tests
         run: vendor/bin/phpunit tests/
 
