Prepare Laravel Application fix 3

--- a/.github/workflows/deploy-application.yml
+++ b/.github/workflows/deploy-application.yml
@@ -24,6 +24,7 @@ jobs:
 
       - name: Prepare Laravel Application
         run: |
+          cp .env.example .env
           php artisan key:generate
 
       - name: Run Tests
